<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_drag_me"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/bg_drag_and_drop_drag"
        android:gravity="center"
        android:text="@string/drag_and_drop_drag_me"
        android:textColor="@color/color_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/container_drop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_drag_and_drop_drop"
        android:gravity="center"
        android:text="@string/drag_and_drop_drop_here"
        android:textColor="@color/color_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_drag_me">

        <ImageView
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_clear" />

        <TextView
            android:id="@+id/tv_drop_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/drag_and_drop_drop_here"
            android:textColor="@color/color_text_color" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>