<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/colorPrimary"
        android:orientation="vertical"
        android:showDividers="middle">

        <TextView
            android:id="@+id/introduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/event_playback_introduce"
            android:textColor="@color/color_text_color" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="15dp"
            android:background="@drawable/beautiful_item_background"
            android:padding="15dp">

            <TextView
                android:id="@+id/tv_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_text_color"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="123" />

            <Button
                android:id="@+id/btn_one"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:text="1"
                android:textColor="@color/color_text_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_two"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:text="2"
                android:textColor="@color/color_text_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_three"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:text="3"
                android:textColor="@color/color_text_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_four"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:text="4"
                android:textColor="@color/color_text_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/btn_start"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/event_start_record"
            android:textColor="@color/color_text_color" />

        <TextView
            android:id="@+id/btn_stop"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/event_stop_record"
            android:textColor="@color/color_text_color" />

        <TextView
            android:id="@+id/btn_playback"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/event_start_playback"
            android:textColor="@color/color_text_color" />

        <TextView
            android:id="@+id/btn_stop_playback"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/event_stop_playback"
            android:textColor="@color/color_text_color" />

    </LinearLayout>

</ScrollView>